[package]
name = "tping"
version = "0.1.0"
authors = ["Arghyadip Chakraborty <dev@arghyac.com>"]
edition = "2024"
description = "A custom ping utility"
homepage = "https://github.com/5G-Measure-India/tping"
repository = "https://github.com/5G-Measure-India/tping"
license = "MIT"
keywords = ["ping", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
surge-ping = "0.8.3"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
] }

[features]
default = []
json = ["serde_json"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
